[gd_scene load_steps=6 format=3 uid="uid://b5am4opiitrki"]

[ext_resource type="Script" path="res://scripts/UI/option_menu.gd" id="1_41di6"]
[ext_resource type="Texture2D" uid="uid://ctwri7g3cgc8r" path="res://assets/icons/Map image/water.jpg" id="2_1g0mu"]
[ext_resource type="Texture2D" uid="uid://c65ghsgmuqrk8" path="res://assets/icons/Map image/BG.jpg" id="2_k3u3d"]
[ext_resource type="Texture2D" uid="uid://dab423dsveu3j" path="res://assets/icons/Map image/jugle.jpg" id="2_lkc7y"]

[sub_resource type="SystemFont" id="SystemFont_ieiwf"]

[node name="UI_option_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_41di6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k3u3d")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999604, 0.985)
mouse_filter = 2

[node name="VBoxOptions" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxOptions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("SystemFont_ieiwf")
theme_override_font_sizes/font_size = 50
text = "Dungeon Blaster Project"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxButton" type="VBoxContainer" parent="MarginContainer/VBoxOptions"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxOptions/VBoxButton"]
layout_mode = 2
size_flags_vertical = 3

[node name="Map 1" type="TextureButton" parent="MarginContainer/VBoxOptions/VBoxButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_lkc7y")
ignore_texture_size = true
stretch_mode = 0

[node name="title map 1" type="Label" parent="MarginContainer/VBoxOptions/VBoxButton/HBoxContainer/Map 1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Fall Forest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map 3" type="TextureButton" parent="MarginContainer/VBoxOptions/VBoxButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_1g0mu")
ignore_texture_size = true
stretch_mode = 0

[node name="title map 2" type="Label" parent="MarginContainer/VBoxOptions/VBoxButton/HBoxContainer/Map 3"]
modulate = Color(0.87451, 0, 0.886275, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Deep In The Abyss"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxOptions/VBoxButton"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
color = Color(1, 0.121569, 0.384314, 1)

[node name="Back" type="Button" parent="MarginContainer/VBoxOptions/VBoxButton/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxOptions/VBoxButton/HBoxContainer/Map 1" to="." method="_on_map_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxOptions/VBoxButton/HBoxContainer/Map 3" to="." method="_on_map_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxOptions/VBoxButton/ColorRect/Back" to="." method="_on_back_pressed"]
